<resources>
    <string name="app_name">Aplikacja prozdrowotna</string>
    <string name="title">APLIKACJA PROZDROWOTNA</string>
    <string name="rzuc_palenie">Rzuć palenie</string>
    <string name="zrzuc_kilogramy">Zrzuć kilogramy</string>
    <string name="oblicz_bmi">Oblicz BMI</string>
    <string name="kalkulator_bmi">Kalkulator BMI</string>
    <string name="wiek">Wiek</string>
    <string name="lata">lata</string>
    <string name="wzrost">Wzrost</string>
    <string name="cm">cm</string>
    <string name="waga">Waga</string>
    <string name="kg">kg</string>
    <string name="lt16"><![CDATA[<16]]></string>
    <string name="btw16and17">16 - 17</string>
    <string name="btw17and18_5">17 - 18,5</string>
    <string name="btw18_5and25">18,5 - 25</string>
    <string name="btw25and30">25 - 30</string>
    <string name="btw30and35">30 - 35</string>
    <string name="btw35and40">35 - 40</string>
    <string name="mt40"><![CDATA[>40]]></string>
    <string name="oblicz">Oblicz!</string>
    <string name="bmi">BMI</string>
    <string name="empty">--</string>
    <string name="idealna_waga">Idealna waga</string>
    <string name="masz_doskonale_bmi">Masz doskonałe BMI!</string>
    <string name="klasyfikacja_bmi">Klasyfikacja BMI</string>
    <string name="wyglodzenie">Wygłodzenie</string>
    <string name="znaczna_niedowaga">Znaczna niedowaga</string>
    <string name="niedowaga">Niedowaga</string>
    <string name="w_normie">W normie</string>
    <string name="nadwaga">Nadwaga</string>
    <string name="otylosc_klasy_i">Otyłość klasy I</string>
    <string name="otylosc_klasy_ii">Otyłość klasy II</string>
    <string name="otylosc_klasy_iii">Otyłość klasy III</string>
    <string name="fit_hint">Pamiętaj, że poniższe ćwiczenia najlepiej wykonywać w kolejności. Po każdym ćwiczeniu zrób sobie minutę przerwy zanim przejdziesz do następnego!</string>
    <string name="mountain_climber">Mountain Climber</string>
    <string name="squats">Squats</string>
    <string name="high_stepping">High stepping</string>
    <string name="push_ups">Push-ups</string>
    <string name="reverse_crunches">Reverse Crunches</string>
    <string name="plank">Plank</string>
    <string name="cobra_stretch">Cobra Stretch</string>
    <string name="powrot">Powrót</string>
    <string name="reset">Reset</string>
    <string name="triceps_dips">Triceps dips</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="long_arm_crunches">Long Arm Crunches</string>
    <string name="bicycle_crunches">Bicycle Crunches</string>
    <string name="dzien_1">Dzień 1</string>
    <string name="zero_percent">0%</string>
    <string name="dzien_2">Dzień 2</string>
    <string name="dzien_3">Dzień 3</string>
    <string name="abdominal_crunches">Abdominal Crunches</string>
    <string name="heel_touch">Heel Touch</string>
    <string name="flutter_kicks">Flutter Kicks</string>
    <string name="dzien_4">Dzień 4</string>
    <string name="skipping_without_rope">Skipping Without Rope</string>
    <string name="lunges">Lunges</string>
    <string name="dzien_5">Dzień 5</string>
    <string name="squat_pulses">Squat Pulses</string>
    <string name="dzien_6">Dzień 6</string>
    <string name="dzien_7">Dzień 7</string>
    <string name="dzien_8">Dzień 8</string>
    <string name="dzien_9">Dzień 9</string>
    <string name="leg_raises">Leg Raises</string>
    <string name="exercises_title">Ćwiczenia \nna odchudzanie</string>
    <string name="dzien_10">Dzień 10</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="x">x</string>
    <string name="title_activity_cig_targets">ActivityCigTargets</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
