<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_15sdp"
        android:orientation="vertical"
        tools:context="com.example.aplikacjaprozdrowotna.ActivityBMI">

        <TextView
            android:id="@+id/tvTitleBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:text="@string/kalkulator_bmi"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/wiek"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etAge"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/lata"
                    android:inputType="number"
                    android:maxLength="2"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/wzrost"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etHeight"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/cm"
                    android:inputType="numberDecimal"
                    android:maxLength="4"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/waga"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/kg"
                    android:inputType="numberDecimal"
                    android:maxLength="4"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/oblicz"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_110sdp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBMItext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi" />

                <TextView
                    android:id="@+id/tvBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_110sdp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIdealWeighttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idealna_waga" />

                <TextView
                    android:id="@+id/tvIdealWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvBMIInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/masz_doskonale_bmi"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/_220sdp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/klasyfikacja_bmi"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/wyglodzenie" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lt16" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/znaczna_niedowaga" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btw16and17" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/niedowaga" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btw17and18_5" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/w_normie" />

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btw18_5and25" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/nadwaga" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btw25and30" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/otylosc_klasy_i" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btw30and35" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/otylosc_klasy_ii" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/btw35and40" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView36"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/otylosc_klasy_iii" />

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/mt40" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>